--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
   </head>
 
   <body>
-    <h1></h1>
+    <% if logged_in? %>
+    <%= "Hi #{current_user.username}" %>
+    <%= link_to "Log Out", user_path(current_user), method: :delete %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
