--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
 <h1>Please Sign In Here: </h1><br>
+<%= flash[:notice] %>
+<br>
 <%=form_for @user do |f| %>
 <%=f.label :username %>
 <%=f.text_field :username %>
