--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,12 @@
 <h1>Please Sign In Here: </h1><br>
 <%=form_for @user do |f| %>
 <%=f.label :username %>
-<%=f.text_field :username %>
+<%=f.text_field :username %> <br>
 <%=f.label :email %>
-<%=f.email_field :email %>
+<%=f.email_field :email %> <br>
 <%=f.label :password %>
-<%=f.password_field :password %>
+<%=f.password_field :password %> <br>
 <%=f.label :password_confirmation %>
-<%=f.password_field :password_confirmation %>
+<%=f.password_field :password_confirmation %> <br>
 <%=f.submit %>
 <%end %>
