--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,15 @@
 <h1><%= @user.username %></h1>
 <h2><%= @user.email %></h2>
+
+<% @pictures.each do |picture| %>
+<img src=<%="#{picture.image_url}"%> >
+<% end %>
+
+<%=form_for @picture, url: user_pictures_path(@user), :controller => "pictures", :action => "create" do |f| %>
+<%=f.label :image_url %>
+<%=f.text_field :image_url %>
+<%=f.label :title %>
+<%=f.text_field :title %>
+<%=f.hidden_field :user_id, :value => @user.id %>
+<%=f.submit "Add Photo" %>
+<% end %>
