--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,18 @@
 <br>
 <%= image_tag(@picture.image_url) %> <br>
 <%= @picture.title %>
+
+<br>
+<br>
+
+<% @comments.each do |comment| %>
+<p><%= link_to comment.user.username, user_path(comment.user.id) %> says: <%= comment.content %></p>
+<% end %>
+
+add a comment:
+<%= form_for @comment do |f| %>
+<%= f.text_area :content %> <br>
+<%= f.hidden_field :user_id, :value => current_user.id %>
+<%= f.hidden_field :picture_id, :value => @picture.id %>
+<%= f.submit %>
+<% end %>
