--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,5 +19,5 @@
         <%= tag.name %> <%= ff.check_box :name %> <br>
         <% end %>
     <% end %>
-<%=f.submit "Add Photo" %>
+<%=f.submit "Add Photo", {:controller => 'picturestags', :action => 'create', :method => 'post', 'picture_id' => @picture.id, 'tag_id'=> @tag.id } %>
 <% end %>
