--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -19,3 +19,5 @@ add a comment:
 <%= f.hidden_field :picture_id, :value => @picture.id %>
 <%= f.submit %>
 <% end %>
+<%=f.submit "Add Photo", {:controller => 'picturestags', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
+<%= button_to 'delete photo', user_picture_path(@picture), method: :delete %>
