--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <%= "Hi #{current_user.username}" %>
     <%= link_to "Log Out", user_path(current_user), method: :delete %>
     <% end %>
+
+    <%= link_to 'Back', :back %>
     <%= yield %>
   </body>
 </html>
