--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -17,7 +17,7 @@ add a comment:
 <%= f.text_area :content %> <br>
 <%= f.hidden_field :user_id, :value => current_user.id %>
 <%= f.hidden_field :picture_id, :value => @picture.id %>
-<%= f.submit %>
+<%=f.submit "Add Comment", {:controller => 'picturestags', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
+
 <% end %>
-<%=f.submit "Add Photo", {:controller => 'picturestags', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
 <%= button_to 'delete photo', user_picture_path(@picture), method: :delete %>
