--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -17,8 +17,7 @@ add a comment:
 <%= f.text_area :content %> <br>
 <%= f.hidden_field :user_id, :value => current_user.id %>
 <%= f.hidden_field :picture_id, :value => @picture.id %>
-<%=f.submit "Add Comment", {:controller => 'picturestags', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
-
+<%=f.submit "Add Comment", {:controller => 'comments', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
 <% end %>
 
 <% if current_user.id == @user.id %>
