--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,14 +12,15 @@
     <%=f.label :title %>
     <%=f.text_field :title %>
     <%=f.hidden_field :user_id, :value => @user.id %>
-<% end %>
+
 
 <br>
 
-<% @tags.each do |tag| %>
-    <%= f.fields_for :tags, tag do |ff| %>
-        <%= tag.name %> <%= ff.check_box :name %> <br>
-        <% end %>
+        <% @tags.each do |tag| %>
+            <%= f.fields_for :tags, tag do |ff| %>
+                <%= tag.name %> <%= ff.check_box :name %> <br>
+                <% end %>
+            <% end %>
+        <%=f.submit "Add Photo", {:controller => "picturestags", :action => "create", :method => "post", "picture_id" => @picture.id} %>
     <% end %>
-<%=f.submit "Add Photo" %>
 <% end %>
