can create a new tag while uploading new photo as well as check an existing tag

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,10 @@
     <%=f.text_field :image_url %>
     <%=f.label :title %>
     <%=f.text_field :title %>
+    <%=f.label :tag %>
+      <%=fields_for :tag, @tag do |ff| %>
+      <%=ff.text_field :name %>
+      <% end %>
     <%=f.hidden_field :user_id, :value => @user.id %>
     <br>
     <br>
