--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -11,7 +11,11 @@
 <p><%= link_to comment.user.username, user_path(comment.user.id) %>: <%= comment.content %></p>
 <% end %>
 
-
+<% @picture.tags.each do |tag| %>
+#<%=tag.name %>
+<% end %>
+<br>
+<br>
 add a comment:
 <%= form_for @comment do |f| %>
 <%= f.text_area :content %> <br>
