--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -8,4 +8,10 @@ populare: <br>
 
 
 trendini: <br>
-<%= Tag.trending %>
+
+<ul>
+    <% Tag.trending.each do |tag| %>
+         <li><%= link_to tag.name, tag_path(tag) %></li>
+    <% end %>
+
+</ul>
