--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,14 +10,19 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
+
  */
 
-body {
+
+ @import 'materialize';
+
+
+
+
+/*body {
      background-color: #00ff00;
 }
 
  h1 {
      background-color: #00ff00;
- }
+ }*/
