--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,29 +1,30 @@
-<br>
-<%= image_tag(@picture.image_url) %> <br>
-<%= @picture.title %>
+<div class="container" align="center">
+    <%= image_tag(@picture.image_url) %> <br>
+    <%= @picture.title %>
 
-<br>
-<br>
 
-<%= flash[:notice] %>
 
-<% @comments.each do |comment| %>
-<p><%= link_to comment.user.username, user_path(comment.user.id) %>: <%= comment.content %></p>
-<% end %>
 
-    <% @picture.tags.each do |tag| %>
-    #<%=link_to tag.name, tag_path(tag) %>
+    <%= flash[:notice] %>
+
+    <% @comments.each do |comment| %>
+    <p><%= link_to comment.user.username, user_path(comment.user.id) %>: <%= comment.content %></p>
     <% end %>
-<br>
-<br>
-add a comment:
-<%= form_for @comment do |f| %>
-<%= f.text_area :content %> <br>
-<%= f.hidden_field :user_id, :value => current_user.id %>
-<%= f.hidden_field :picture_id, :value => @picture.id %>
-<%=f.submit "Add Comment", {:controller => 'comments', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
-<% end %>
 
-<% if current_user.id == @user.id %>
-    <%= button_to 'delete photo', user_picture_path(@picture), method: :delete %>
-<% end %>
+        <% @picture.tags.each do |tag| %>
+            #<%=link_to tag.name, tag_path(tag) %>
+        <% end %>
+    <br>
+    <br>
+    add a comment:
+    <%= form_for @comment do |f| %>
+    <%= f.text_area :content %> <br>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+    <%= f.hidden_field :picture_id, :value => @picture.id %>
+    <%=f.submit "Add Comment", {:controller => 'comments', :action => 'create', :method => 'post', 'picture_id' => @picture.id} %>
+    <% end %>
+
+    <% if current_user.id == @user.id %>
+        <%= button_to 'delete photo', user_picture_path(@picture), method: :delete %>
+    <% end %>
+</div>
