working on materialize checkboxes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,8 +37,9 @@
         <table border = "1">
             <tr>
                 <%= collection_check_boxes(:picture, :tag_ids, Tag.all, :id, :name) do |b| %>
-                <td><%= b.label { b.check_box(class: "check_box") + b.text} %></td>
-
+                <!-- <td><%= b.label { b.check_box(class: "check_box") + b.text} %></td> -->
+                <input type="checkbox" class="filled-in-box" id="<%=tag.id%>" />
+                     <label for="<%=tag.id%>"><%=b.text%></label>
                 <% end %>
             </tr>
         </table>
