--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,12 @@
 <h1><%= @user.username %></h1> <h1><%= @user.email %></h1>
 
 <div class="container" align="right">
-    <p>recent comments:</p>
-    <% @comments.each do |comment| %>
-    <%= link_to comment.user.username, user_path(comment.user) %>:   <%= comment.content %> <br>
+  <% if @comments.length != 0 %>
+      <p>recent comments:</p>
+      <% @comments.each do |comment| %>
+      <%= link_to comment.user.username, user_path(comment.user) %>:   <%= comment.content %> <br>
     <% end %>
+  <% end %>
 </div>
 
 <div class="container" align="right">
