--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,13 @@
 <div class="container" align="right">
   <p>most populare:</p>
 <% Tag.most_popular.each do |tag| %>
-    <%= link_to tag.name, tag_path(tag) %>
+<div class="row">
+  <div class="col s6">
+    <div class="chip">
+      <div class="right"></div>
+      <%= link_to tag.name, tag_path(tag) %>
+      </div>
+    </div>
 <% end %>
 </div>
 
