--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,10 +17,10 @@
 </div>
 
 <div class="container" align="right">
-  <p>most populare:</p>
-<% Tag.most_popular.each do |tag| %>
-    <%= link_to tag.name, tag_path(tag) %>
-<% end %>
+      <p>most populare:</p>
+    <% Tag.most_popular.each do |tag| %>
+        <%= link_to tag.name, tag_path(tag) %>
+    <% end %>
 </div>
 
 <div class="container" align="center">
@@ -33,48 +33,66 @@
     <% end %>
 </div>
 
-
-<div class="container">
-    <% if current_user.id == @user.id %>
-        <%=form_for @picture, url: user_pictures_path(@user), :controller => "pictures", :action => "create" do |f| %>
-        <div class="row" align="center">
-                <div class="col s10 offset-s1">
-                    <!-- <%=f.label :image_url %> -->
-                <%=f.text_field :image_url, placeholder: "Please enter an image address"%>
+        <div class="row">
+            <div class="col s6 offset-4">
+                <div class="flash">
+                        <h1> <%= flash[:notice] %></h1>
                 </div>
+            </div>
+        </div>
 
-                    <div class="col s8 offset-s2">
-                        <!-- <%=f.label :title %> -->
-                        <%=f.text_field :title, placeholder: "enter a caption here!" %>
+
+    <div class="container">
+        <% if current_user.id == @user.id %>
+            <%=form_for @picture, url: user_pictures_path(@user), :controller => "pictures", :action => "create" do |f| %>
+            <div class="row" align="center" id="bottom">
+                    <div class="col s10 offset-s1", align="center">
+                        <!-- <%=f.label :image_url %> -->
+                    <%=f.text_field :image_url, :placeholder => "Please enter an image address"%>
                     </div>
 
-                    <div class="col s6 offset-s3">
-                        <%=fields_for :tag, @tag do |ff| %>
-                        <!-- <%=f.label :tag %> -->
-                            <%=ff.text_field :name,  placeholder: "Create a new tag" %>
-                        <% end %>
-                    </div>
+                        <div class="col s8 offset-s2">
+                            <!-- <%=f.label :title %> -->
+                            <%=f.text_field :title, placeholder: "enter a caption here!" %>
+                        </div>
 
-        <%=f.hidden_field :user_id, :value => @user.id %>
+                        <div class="col s6 offset-s3">
+                            <%=fields_for :tag, @tag do |ff| %>
+                            <!-- <%=f.label :tag %> -->
+                                <%=ff.text_field :name,  placeholder: "Create a new tag" %>
+                            <% end %>
+                        </div>
+
+            <%=f.hidden_field :user_id, :value => @user.id %>
+        </div>
+
+
+            <br>
+            <br>
+            <table >
+                <tr>
+                    <%= collection_check_boxes(:picture, :tag_ids, Tag.all, :id, :name) do |b| %>
+                    <!-- <td><%= b.label { b.check_box(class: "check_box") + b.text} %></td> -->
+
+
+            <td><input type="checkbox" class="filled-in-box" id="<%=b.object[:id]%>" name="picture[tag_ids][]" value="<%=b.object[:id]%>" />
+             <label for="<%=b.object[:id]%>"><%=b.text%></label>    </td>
+
+                    <% end %>
+                </tr>
+            </table>
+
+
+            <!-- <div class="row">
+                <div class="col s4 offset-s4">
+                    <button class="btn waves-effect waves-light" type="submit" name="action" >
+                      <i class="material-icons right"></i>
+                    </button>
+                </div>
+            </div> -->
+
+    <%=f.submit "Add Photo" %>
+
+          <% end %>
+        <% end %>
     </div>
-
-
-        <br>
-        <br>
-        <table >
-            <tr>
-                <%= collection_check_boxes(:picture, :tag_ids, Tag.all, :id, :name) do |b| %>
-                <!-- <td><%= b.label { b.check_box(class: "check_box") + b.text} %></td> -->
-
-
-        <td><input type="checkbox" class="filled-in-box" id="<%=b.object[:id]%>" name="picture[tag_ids][]" value="<%=b.object[:id]%>" />
-         <label for="<%=b.object[:id]%>"><%=b.text%></label>    </td>
-
-                <% end %>
-            </tr>
-        </table>
-
-        <%=f.submit "Add Photo" %>
-      <% end %>
-    <% end %>
-</div>
