--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -3,7 +3,9 @@
     <div class="row">
         <div class="col m12">
             <div class="card">
-                <div class="card-image">
+                <!-- <div class="card-image"> -->
+                <div class="responsive-img">
+                    <!-- class="responsive-img"  -->
                 <%= image_tag(@picture.image_url) %>
                     <div class="card-content">
                         <%= @picture.title %>
