--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Instagram</title>
     <%= csrf_meta_tags %>
 
@@ -25,6 +26,7 @@
         <li><%=link_to "Friends", users_path %></li>
         <li><%=link_to "Tags", tags_path %></li>
         <li><%=link_to "Log Out", user_path(current_user), method: :delete %></li>
+        <i class="large material-icons">power_settings_new</i>
         <% else %>
         <li><%=link_to "Log In", login_path %></li>
         <li><%=link_to "Sign Up", signup_path %></li>
