--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -78,15 +78,17 @@
         </div>
 
 
-            <br>
-            <br>
-            <table >
+        <div class="row" align="center" text-align="top">
+            <div class="col m6 offset-m3">
+                    ...or choose one of the most popular tags below!
+            </div>
+        </div>
+
+
+            <table>
                 <tr>
-                    <%= collection_check_boxes(:picture, :tag_ids, Tag.all, :id, :name) do |b| %>
-                    <!-- <td><%= b.label { b.check_box(class: "check_box") + b.text} %></td> -->
-
-
-            <td><input type="checkbox" class="filled-in-box" id="<%=b.object[:id]%>" name="picture[tag_ids][]" value="<%=b.object[:id]%>" />
+                    <%= collection_check_boxes(:picture, :tag_ids, Tag.most_popular, :id, :name) do |b| %>
+                    <td><input type="checkbox" class="filled-in-box" id="<%=b.object[:id]%>" name="picture[tag_ids][]" value="<%=b.object[:id]%>" />
              <label for="<%=b.object[:id]%>"><%=b.text%></label>    </td>
 
                     <% end %>
@@ -94,13 +96,27 @@
             </table>
 
 
-            <div class="row">
-                <div class="col s4 offset-s5">
-                    <button class="btn waves-effect waves-light" type="submit" name="action" >
-                       <%=f.submit "Add Photo" %>
-                    </button>
+
+
+
+
+
+
+            <div class="row" align="center">
+                <div class="col m12">
+                    <i class="4rem material-icons">fast_forward</i>
+
+                            <!-- <div class="col s4 offset-s5"> -->
+                                <button class="btn waves-effect waves-light" type="submit" name="action" >
+                                   <%=f.submit "Add Photo" %>
+                                </button>
+                            <!-- </div>
+                 -->
+
+                    <i class="4rem material-icons">fast_rewind</i>
                 </div>
             </div>
+
 
 
 
