tags index page has images for each trending & popular tag

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,17 +1,46 @@
-<br>
-populare: <br>
-<ul>
+<div class="container">
+<div class="row"></div>
+<div class="row"></div>
+<center><i class="small material-icons">star star star star star star star star star star</i><h4>Most Popular Tags</h4><i class="small material-icons">star star star star star star star star star star</i></center>
+<div class="row"></div>
+<div class="row"></div>
+<div class="row">
     <% Tag.most_popular.each do |tag| %>
-        <li><%= link_to tag.name, tag_path(tag) %></li>
+        <div class="col s8 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="<%=tag.pictures.last.image_url%>">
+            </div>
+              <div class="card-action">
+                <%= link_to tag.name, tag_path(tag) %>
+              </div>
+          </div>
+      </div>
+
     <% end %>
-</ul>
+    </div>
+
+    <div class="row"></div>
+    <div class="row"></div>
+  <center><i class="small material-icons">star star star star star star star star star star</i><h4>Trending Tags</h4><i class="small material-icons">star star star star star star star star star star</i></center>
+    <div class="row"></div>
+    <div class="row">
+        <% Tag.trending.each do |tag| %>
+            <div class="col s8 m4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="<%=tag.pictures.last.image_url%>">
+                </div>
+                  <div class="card-action">
+                    <%= link_to tag.name, tag_path(tag) %>
+                  </div>
+              </div>
+          </div>
+
+        <% end %>
+        </div>
 
 
-trendini: <br>
 
-<ul>
-    <% Tag.trending.each do |tag| %>
-         <li><%= link_to tag.name, tag_path(tag) %></li>
-    <% end %>
 
-</ul>
+</div>
