--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
      <div class="card-panel grey lighten-5 z-depth-1">
        <div class="row valign-wrapper">
          <div class="col s12">
-           <img src="http://i.imgur.com/C8vkhdo.png" alt="" class="circle responsive-img">
+           <%= image_tag('smiley.png')%>
            <h5><%=link_to user.username, user_path(user)%></h5>
          </div>
        </div>
