--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,9 @@
   </head>
 
   <body>
-
-
     <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><img src="http://i.imgur.com/CrdKavI.png"></a>
+      <a href="#" class="brand-logo"><%= image_tag('logo.png') %></a>
       <div class="container">
         <div class="row">
         <div class="col s5">
@@ -34,9 +32,7 @@
         <li><%=link_to "Sign Up", signup_path %></li>
         <% end %>
 
-
-        </ul>
-
+      </ul>
 
         </div>
 
@@ -44,10 +40,8 @@
 
     </div>
 
+  </nav>
 
-    </nav>
-
-      <%= yield %>
-    </div>
+    <%= yield %>
   </body>
 </html>
