added more styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,10 +31,13 @@
     text-align: center;
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
     color: #ADD8E6;
 }
 
+.material-icons {
+  color: #ea80fc
+}
 
 .nav-wrapper {
   background-color: pink;
