--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <div class="row"></div>
     <%@users.each do |user|%>
     <div class="row">
-     <div class="card-panel grey lighten-5 z-depth-1">
+     <div class="card-panel white z-depth-1">
        <div class="row valign-wrapper">
          <div class="col s12">
            <%= image_tag('smiley.png')%>
