--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,15 @@
-<h1><%= @user.username %></h1> <h1><%= @user.email %></h1>
+<center>
+  <br>
+  <div class="row">
+      <div class="col s12">
+        <div class="card-panel white">
+            <%= image_tag('smiley.png') %>
+            <h5><%= @user.username %></h5>
+            <h5><%= @user.email %></h5>
+          </div>
+        </div>
+      </div>
+</center>
 
 <div class="" align="right">
   <% if @comments.length != 0 %>
