--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,8 +43,9 @@ h1, h2, h3, h4, h5 {
   background-color: pink;
 }
 
-
-
+.placeformat {
+    color: #9e9e9e;
+}
 
 /*body {
      background-color: #00ff00;
