--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,12 +9,11 @@
      <div class="card-panel white z-depth-1">
        <div class="row valign-wrapper">
          <div class="col s12">
-           <%= image_tag('smiley.png')%>
+           <%= image_tag(user.user_pic)%>
            <h5><%=link_to user.username, user_path(user)%></h5>
          </div>
        </div>
      </div>
      </div>
     <%end%>
-
 </div>
