--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
       <div class="col s12">
         <div class="card-panel white">
-            <%= image_tag('smiley.png') %>
+            <%= image_tag(@user.user_pic) %>
             <h5><%= @user.username %></h5>
             <h5><%= @user.email %></h5>
           </div>
