--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,5 +10,10 @@
 <%=f.password_field :password %> <br>
 <%=f.label :password_confirmation %>
 <%=f.password_field :password_confirmation %> <br>
+<%= f.label :user_pic %>
+
+<div class="placeformat">
+    <%= f.text_field :user_pic, value: 'Drop in an image url to customize your profile!' %>
+</div>
 <%=f.submit %>
 <%end %>
