--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,18 @@ h1, h2, h3, h4, h5 {
   background-color: pink;
 }
 
+.placeholder {
+  color: grey;
+
+}
+
+html {
+font-family: 'Slabo 27px', serif;
+// font-family: 'Roboto Condensed', sans-serif;
+// font-family: 'Titillium Web', sans-serif;
+// font-family: 'VT323', monospace;
+ }
+
 
 
 
