--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,16 @@
 <div class="container">
   <div class="row"></div>
   <div class="row"></div>
-  <h1><center>My Beautiful Friends</center></h1>
+  <h1><center>My Friends</center></h1>
   <div class="row"></div>
   <div class="row"></div>
     <%@users.each do |user|%>
     <div class="row">
+
      <div class="card-panel white z-depth-1">
        <div class="row valign-wrapper">
-         <div class="col s12">
-           <%= image_tag(user.user_pic)%>
+         <div class="col s12 center">
+           <%= link_to image_tag(user.user_pic), user_path(user)%>
            <h5><%=link_to user.username, user_path(user)%></h5>
          </div>
        </div>
