--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1><%=link_to 'Please Login', login_path%></h1>
-<h2><%=link_to 'Or Signup', signup_path%></h2>
+<div class="container">
+    <h1><%=link_to 'Please Login', login_path%></h1>
+    <h2><%=link_to 'Or Signup', signup_path%></h2>
+</div>
