--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,12 +49,17 @@ h1, h2, h3, h4, h5 {
 }
 
 html {
-font-family: 'Slabo 27px', serif;
+// font-family: 'Slabo 27px', serif;
 // font-family: 'Roboto Condensed', sans-serif;
-// font-family: 'Titillium Web', sans-serif;
-// font-family: 'VT323', monospace;
+font-family: 'Titillium Web', sans-serif;
+font-size: 120%
+
  }
 
+.pix {
+  max-width: 100%;
+  height: auto;
+}
 
 
 
