--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <div class="row">
         <div class="col s5">
             <% if logged_in? %>
-            <%= "Welcome! #{current_user.username}" %>
+            <%= "Welcome #{current_user.username}!" %>
             <% end %>
         </div>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
