--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
     <% @sorted.reverse.each do |picture| %>
        <div class="row">
            <div class="col s12 center">
-                   <%=  link_to image_tag("#{picture.image_url}"), user_picture_url(@user.id, picture) %>
+                  <div class="pix"> <%=  link_to image_tag("#{picture.image_url}"), user_picture_url(@user.id, picture) %></div>
            </div>
        </div>
    <% end %>
