--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+<div class="container">
+
+
     <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><%= image_tag('logo.png') %></a>
@@ -45,5 +48,6 @@
   </nav>
 
     <%= yield %>
+    </div>
   </body>
 </html>
