--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><%= image_tag('logo.png') %></a>
+      <a href="/" class="brand-logo"><%= image_tag('logo.png') %></a>
       <div class="container">
         <div class="row">
         <div class="col s5">
