--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,13 @@
 <div class="container">
+    <% if !logged_in? %>
     <h1><%=link_to 'Please Login', login_path%></h1>
     <h2><%=link_to 'Or Signup', signup_path%></h2>
+    <% else %>
+    <center><h1>What would you like to do?</h1>
+    <%= link_to "Go to my feed", user_path(current_user) %>
+    <p><%= link_to "Upload a photo", user_path(current_user) %></p>
+    <p><%= link_to "Check out my friends", users_path %></p>
+    <p><%= link_to "Check trending tags", users_path %></p>
+    </center>
+    <% end %>
 </div>
