added a little border to picture show page picture box to ccenter it

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -4,7 +4,8 @@
         <div class="col m12" padding-top: "40px">
             <div class="card">
                 <div class="card-image">
-                    <%= image_tag(@picture.image_url) %>
+                  <div class="row"></div>
+                    <p><%= image_tag(@picture.image_url) %></p>
                     <div class="card-content">
                         <%= @picture.title %>
                     </div>
