--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,8 @@
             <%= image_tag(@user.user_pic) %>
             <h5><%= @user.username %></h5>
             <h5><%= @user.email %></h5>
+            <p>25/f/bk</p>
+            <p>i love long walks on beach and dolphins</p>
           </div>
         </div>
       </div>
