--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,13 @@
             <%= image_tag(@user.user_pic) %>
             <h5><%= @user.username %></h5>
             <h5><%= @user.email %></h5>
-            <p>25/f/bk</p>
+            <p>Bio:</p>
             <p>i love long walks on beach and dolphins</p>
+            <%= link_to root_path do %>
+            <!-- i want this to link to the bottom upload field -->
+              <i class="small material-icons">library_add</i>
+                <% end %>
+              </div>
           </div>
         </div>
       </div>
@@ -48,13 +53,25 @@
 
 
 <!-- <div class="container"> -->
-    <% @sorted.reverse.each do |picture| %>
-       <div class="row">
-           <div class="col s12 center">
-                  <div class="pix"> <%=  link_to image_tag("#{picture.image_url}"), user_picture_url(@user.id, picture) %></div>
-           </div>
-       </div>
-   <% end %>
+
+
+<div class="row">
+    <div class="col m12" padding-top: "40px">
+        <center><div class="card">
+            <div class="card-image">
+              <div class="row"></div>
+              <% @sorted.reverse.each do |picture| %>
+                <div class="row">
+                  <p><div class="col s12 center"></p>
+                    <div class="pix"> <%=  link_to image_tag("#{picture.image_url}"), user_picture_url(@user.id, picture) %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          </div></center>
+        </div>
+      </div>
 <!-- </div> -->
 
 
