--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,8 @@
             <h5><%= @user.email %></h5>
             <p>Bio:</p>
             <p>i love long walks on beach and dolphins</p>
+            <p>Update Profile or Add Photo </p>
+
             <%= link_to root_path do %>
             <!-- i want this to link to the bottom upload field -->
               <i class="small material-icons">library_add</i>
