--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
     <%= link_to "Go to my feed", user_path(current_user) %>
     <p><%= link_to "Upload a photo", user_path(current_user) %></p>
     <p><%= link_to "Check out my friends", users_path %></p>
-    <p><%= link_to "Check trending tags", users_path %></p>
+    <p><%= link_to "Check trending/most popular tags", tags_path %></p>
     </center>
     <% end %>
 </div>
