--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -4,20 +4,21 @@
 
 <div class="row">
     <div class="col m12" padding-top: "40px">
-        <center><div class="card">
+        <center>
+          <div class="card">
             <div class="card-image">
               <div class="row"></div>
                 <% @tag.pictures.each do |picture| %>
                 <div class="row">
                   <p><div class="col s12 center"></p>
                   <%= link_to (image_tag picture.image_url), user_picture_path(picture.user, picture) %>
+                  </div>
                 </div>
-              </div>
                 <% end %>
               </div>
             </div>
-          </div>
-        </div>
+    </div>
+</div>
 
 
 </div>
