--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
       <div class="col s12">
         <div class="card-panel white">
-            <%= image_tag(@user.user_pic) %>
+            <%= image_tag(@user.user_pic, class: "responsive-img")  %>
             <h5><%= @user.username %></h5>
             <h5><%= @user.email %></h5>
             <p>Bio:</p>
@@ -57,19 +57,20 @@
 
 <div class="row">
     <div class="col m12" padding-top: "40px">
-        <center><div class="card">
-            <div class="card-image">
-              <div class="row"></div>
+
               <% @sorted.reverse.each do |picture| %>
+              <center><div class="card">
+                  <div class="card-image">
                 <div class="row">
                   <p><div class="col s12 center"></p>
                     <div class="pix"> <%=  link_to image_tag("#{picture.image_url}"), user_picture_url(@user.id, picture) %>
                     </div>
                   </div>
                 </div>
+              </div>
+            </div></center>
               <% end %>
-            </div>
-          </div></center>
+
         </div>
       </div>
 <!-- </div> -->
@@ -90,7 +91,7 @@
             <div class="row" align="center" id="bottom">
                     <div class="col s10 offset-s1", align="center">
                         <!-- <%=f.label :image_url %> -->
-                    <%=f.text_field :image_url, :placeholder => "Please enter an image address"%>
+                    <%=f.text_field :image_url, :placeholder => "Please enter an image address (jpeg, png, gif)"%>
                     </div>
 
                         <div class="col s8 offset-s2">
