--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
             <h5><%= @user.email %></h5>
             <p>Bio:</p>
             <p>i love long walks on beach and dolphins</p>
-            <%= link_to user_path(current_user, anchor: "bottom") do %>
+            <%= link_to user_path(current_user.id, anchor: "bottom") do %>
             <!-- i want this to link to the bottom upload field -->
               <i class="small material-icons">library_add</i>
                 <% end %>
