--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         <li><%=link_to "My Feed", user_path(current_user)%></li>
         <li><%=link_to "Friends", users_path %></li>
         <li><%=link_to "Tags", tags_path %></li>
-        <li><%=link_to "Log Out", user_path(current_user), method: :delete %></li>
+        <li><%=link_to "Log Out", logout_path, method: :delete %></li>
         <i class="large material-icons">power_settings_new</i>
         <% else %>
         <li><%=link_to "Log In", login_path %></li>
