--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -8,12 +8,15 @@
     <% Tag.most_popular.each do |tag| %>
         <div class="col s8 m4">
           <div class="card">
-            <div class="card-image">
-              <img src="<%=tag.pictures.last.image_url%>">
-            </div>
-              <div class="card-action">
-                <%= link_to tag.name, tag_path(tag) %>
-              </div>
+              <% if tag.pictures.last != nil %>
+
+                    <div class="card-image">
+                      <img src="<%=tag.pictures.last.image_url%>">
+                    </div>
+                  <div class="card-action">
+                    <%= link_to tag.name, tag_path(tag) %>
+                  </div>
+                  <% end %>
           </div>
       </div>
 
