--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,18 @@
 <h1>Please Sign In Here: </h1><br>
 <%= flash[:notice] %>
 <br>
-<%=form_for @user do |f| %>
-<%=f.label :username %>
-<%=f.text_field :username %> <br>
-<%=f.label :email %>
-<%=f.email_field :email %> <br>
-<%=f.label :password %>
-<%=f.password_field :password %> <br>
-<%=f.label :password_confirmation %>
-<%=f.password_field :password_confirmation %> <br>
-<%= f.label :user_pic %>
-
+    <%=form_for @user do |f| %>
+    <%=f.label :username %>
+    <%=f.text_field :username %> <br>
+    <%=f.label :email %>
+    <%=f.email_field :email %> <br>
+    <%=f.label :password %>
+    <%=f.password_field :password %> <br>
+    <%=f.label :password_confirmation %>
+    <%=f.password_field :password_confirmation %> <br>
+    <%= f.label :user_pic %>
 <div class="placeformat">
-    <%= f.text_field :user_pic, value: 'Drop in an image url to customize your profile!' %>
+    <%= f.text_field :user_pic, :value => placeholder: "Drop in an image url to customize your profile!",  %>
 </div>
 <%=f.submit %>
 <%end %>
