fixed picture_tag show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -109,7 +109,7 @@
                             <% end %>
                         </div>
             <%=f.hidden_field :user_id, :value => @user.id %>
-            <%= link_to image_tag(@picture.image.url(:med)), @picture.image.url %>
+            <!-- <%= link_to image_tag(@picture.image.url(:med)), @picture.image.url %> -->
         </div>
 
 
