--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -11,7 +11,7 @@
                     <div class="card-image">
                 <div class="row">
                   <p><div class="col s12 center"></p>
-                  <%= link_to (image_tag picture.image_url), user_picture_path(picture.user, picture) %>
+                  <%= link_to (image_tag picture.image), user_picture_path(picture.user, picture) %>
                   </div>
                 </div>
               </div>
