--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,8 @@
 <h1>Edit Profile Pic</h1>
-<%=form_for @user do |f| %>
+<%=form_for @user, html: { multipart: true } do |f| %>
 <%=f.hidden_field :username %> <br>
 <%=f.hidden_field :email %> <br>
-<%= f.label :user_pic %>
-<div class="placeformat">
-    <%= f.text_field :user_pic, value: 'Drop in an image url to customize your profile!' %>
-</div>
+<%= f.file_field :image, class: "form-control" %>
 <%=f.hidden_field :password %> <br>
 <%=f.hidden_field :password_confirmation %> <br>
 <%=f.submit %>
