--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,10 +10,6 @@
 <%=f.password_field :password %> <br>
 <%=f.label :password_confirmation %>
 <%=f.password_field :password_confirmation %> <br>
-<%= f.label :user_pic %>
-
-<div class="placeformat">
-    <%= f.text_field :user_pic, placeholder: 'Drop in an image url to customize your profile!' %>
-</div>
+<%= f.file_field :image, class: "form-control" %>
 <%=f.submit %>
 <%end %>
