changed favicon and name

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
             <div class="row">
               <p><div class="col s12 center"></p>
                 <div class="row">
-           <%= link_to image_tag(user.user_pic), user_path(user)%>
+           <%= link_to image_tag(user.image), user_path(user)%>
            <h5><%=link_to user.username, user_path(user)%></h5>
          </div>
        </div>
