welcome to outstagram

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <center><h3>Welcome to Instagram</h3></center>
+  <center><h3>Welcome to Outstagram</h3></center>
     <% if !logged_in? %>
     <br>
     <center><h4><%=link_to 'Please Login', login_path%></h4>
